@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: parameterize upgrade/obsoletes tag. Panu's Big Mistake imho.
     - jbj: reset errno to 0 in rpmgiOpen to eliminate false ENOENT failure.
     - rse: do not build and install NLS data under po/ at all in case of --disable-nls
     - jbj: add new-fangled debugedit patch (#246404).
